--- a/index.html
+++ b/index.html
@@ -1,299 +1,130 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Quatertime</title>
-
-  <!-- PWA -->
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#123f42" />
-  <link rel="apple-touch-icon" href="icons/icon-192.png" />
-
-  <!-- Tailwind (CDN) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QuarterTime</title>
   <style>
-    :root{
-      --bg:#15484a;            /* темно-тіловий фон як у макеті */
-      --ringBg:#9a9a9a;        /* сіро-нитковий сегмент */
-      --q1:#d1d5e7;            /* світло-блакитний */
-      --q2:#d98b8b;            /* рожево-червоний */
-      --q3:#cfead5;            /* м'ятний */
-      --q4:#bfcdf9;            /* пастель-індиго */
-      --inner:#8d85ff;         /* фіолетове центральне коло */
-      --tick:#c8d4e7;          /* дрібні поділи */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      height: 100vh;
+      background: linear-gradient(135deg, #1e1e2f, #2b2b40);
+      color: white;
     }
-    html,body{height:100%}
-    body{
-      background:var(--bg);
-      color:#eaf2f2;
-      -webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;
-    }
-    /* плавні тіні/скруглення для панелей */
-    .glass{
-      backdrop-filter: blur(6px);
-      background: #0c2a2b88;
-      border: 1px solid #2e5a5b;
-    }
-    /* кнопка меню (гамбургер) */
-    .burger div{height:3px;background:#2d3f41;border-radius:2px}
-    .burger:hover div{background:#9fb8ba}
 
-    /* підказки */
-    .hint{opacity:.65}
-    .ring-seg{cursor:pointer;transition:transform .15s ease, opacity .15s ease}
-    .ring-seg:hover{transform:scale(1.02);opacity:.95}
-    .chip{border:1px solid #335c5e;background:#15484a66}
+    /* Фрактальна сітка */
+    .grid {
+      flex: 3;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 10px;
+      padding: 20px;
+    }
+
+    .cell {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 15px;
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      transition: all 0.3s ease;
+      overflow-y: auto;
+    }
+
+    .cell:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    .task {
+      background: rgba(255, 255, 255, 0.15);
+      margin: 5px 0;
+      padding: 5px 10px;
+      border-radius: 8px;
+    }
+
+    /* Панель додавання завдань */
+    .sidebar {
+      flex: 1;
+      background: rgba(0, 0, 0, 0.3);
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      border-left: 2px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .sidebar h2 {
+      margin-top: 0;
+      font-size: 1.2em;
+      text-align: center;
+    }
+
+    input, select, button {
+      margin: 10px 0;
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1em;
+    }
+
+    input, select {
+      width: 100%;
+    }
+
+    button {
+      background: #4cafef;
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #379ad5;
+    }
   </style>
 </head>
-<body class="min-h-full">
-  <!-- Header -->
-  <header class="px-6 sm:px-10 py-5 flex items-center justify-between">
-    <div class="text-3xl sm:text-5xl font-semibold tracking-wide">Quatertime</div>
-    <button id="btnMenu" aria-label="Menu" class="burger w-9 space-y-1.5">
-      <div></div><div></div><div></div>
-    </button>
-  </header>
+<body>
 
-  <!-- App -->
-  <main class="px-4 sm:px-8 pb-10">
-    <div class="mx-auto max-w-5xl grid grid-cols-1 lg:grid-cols-[1fr,380px] gap-6">
-      <!-- Fractal Ring (SVG) -->
-      <section class="relative flex items-center justify-center aspect-square w-full max-w-[760px] mx-auto">
-        <svg id="ring" class="w-full h-full" viewBox="-400 -400 800 800" role="img" aria-label="Фрактальне кільце часу"></svg>
+  <!-- Фрактальна сітка -->
+  <div class="grid" id="grid">
+    <div class="cell" id="q1"><h3>Q1</h3></div>
+    <div class="cell" id="q2"><h3>Q2</h3></div>
+    <div class="cell" id="q3"><h3>Q3</h3></div>
+    <div class="cell" id="q4"><h3>Q4</h3></div>
+  </div>
 
-        <!-- підказки / гарячі клавіші -->
-        <div class="absolute bottom-2 left-2 text-xs hint hidden sm:block">
-          ←/→ рівні | T – сьогодні | Ctrl+N – нове
-        </div>
-      </section>
-
-      <!-- Right drawer / tasks -->
-      <aside id="drawer" class="glass rounded-2xl p-4 lg:p-5 lg:sticky lg:top-6 max-lg:fixed max-lg:right-4 max-lg:bottom-4 max-lg:left-4 max-lg:z-20 hidden">
-        <div class="flex items-center justify-between gap-3 mb-3">
-          <h2 id="drawerTitle" class="text-xl font-semibold">Завдання</h2>
-          <button id="btnClose" class="px-3 py-1 rounded-xl chip text-sm">Закрити</button>
-        </div>
-        <div id="drawerBody" class="space-y-3 text-sm">
-          <p class="opacity-80">Обери сегмент на кільці (Q1–Q4, місяць чи тиждень), щоб побачити задачі.</p>
-          <div class="flex flex-wrap gap-2">
-            <span class="px-2 py-1 rounded-xl chip">Високий</span>
-            <span class="px-2 py-1 rounded-xl chip">Середній</span>
-            <span class="px-2 py-1 rounded-xl chip">Низький</span>
-          </div>
-          <ul id="taskList" class="divide-y divide-[#2e5a5b]"></ul>
-        </div>
-      </aside>
-    </div>
-  </main>
+  <!-- Панель для введення завдань -->
+  <div class="sidebar">
+    <h2>Нове завдання</h2>
+    <input type="text" id="taskInput" placeholder="Введіть завдання...">
+    <select id="quarterSelect">
+      <option value="q1">Q1</option>
+      <option value="q2">Q2</option>
+      <option value="q3">Q3</option>
+      <option value="q4">Q4</option>
+    </select>
+    <button onclick="addTask()">Додати</button>
+  </div>
 
   <script>
-    /***********************
-     * Geometry helpers
-     ***********************/
-    const TAU = Math.PI * 2;
+    function addTask() {
+      const taskText = document.getElementById("taskInput").value;
+      const quarter = document.getElementById("quarterSelect").value;
 
-    function arcPath(cx, cy, rOuter, rInner, start, end){
-      // start/end в радіанах, 0 зверху, за год. стрілкою
-      const a0 = start - Math.PI/2;
-      const a1 = end   - Math.PI/2;
+      if (taskText.trim() === "") return;
 
-      const x0o = cx + rOuter * Math.cos(a0), y0o = cy + rOuter * Math.sin(a0);
-      const x1o = cx + rOuter * Math.cos(a1), y1o = cy + rOuter * Math.sin(a1);
-      const x0i = cx + rInner * Math.cos(a1), y0i = cy + rInner * Math.sin(a1);
-      const x1i = cx + rInner * Math.cos(a0), y1i = cy + rInner * Math.sin(a0);
+      const task = document.createElement("div");
+      task.classList.add("task");
+      task.innerText = taskText;
 
-      const large = (end - start) % TAU > Math.PI ? 1 : 0;
+      document.getElementById(quarter).appendChild(task);
 
-      return [
-        `M ${x0o} ${y0o}`,
-        `A ${rOuter} ${rOuter} 0 ${large} 1 ${x1o} ${y1o}`,
-        `L ${x0i} ${y0i}`,
-        `A ${rInner} ${rInner} 0 ${large} 0 ${x1i} ${y1i}`,
-        `Z`
-      ].join(' ');
+      document.getElementById("taskInput").value = "";
     }
-
-    /***********************
-     * Fractal Ring Model
-     ***********************/
-    const model = {
-      level: 'year', // year -> quarter -> month
-      year: new Date().getFullYear(),
-      tasks: {} // ключі: Q1, Q2, ..., Q1-M2, Q2-W3 тощо (демо-дані нижче)
-    };
-
-    // демо-дані (щоб одразу було видно у правій панелі)
-    const demoTasks = {
-      Q1: [
-        {title:'Старт Q1 OKR', prio:'high', status:'active', due:'2025-01-15'},
-        {title:'План аналітики', prio:'med', status:'active', due:'2025-02-10'}
-      ],
-      Q2: [
-        {title:'Реліз v0.3', prio:'high', status:'active', due:'2025-04-20'},
-        {title:'Оновлення PWA', prio:'low', status:'queued', due:'2025-05-05'}
-      ],
-      Q3: [{title:'Дослідження UX-фракталів', prio:'med', status:'active', due:'2025-08-03'}],
-      Q4: [{title:'Підсумки року', prio:'high', status:'planned', due:'2025-12-20'}],
-      'Q1-M2': [{title:'Прототип кілець', prio:'high', status:'active'}],
-      'Q2-M1': [{title:'Дизайн темної теми', prio:'med', status:'planned'}],
-    };
-    model.tasks = demoTasks;
-
-    /***********************
-     * Rendering
-     ***********************/
-    const svg = document.getElementById('ring');
-
-    function clearSVG(){ while(svg.firstChild) svg.removeChild(svg.firstChild); }
-
-    function seg({rOuter, rInner, start, end, fill, id, label}){
-      const p = document.createElementNS('http://www.w3.org/2000/svg','path');
-      p.setAttribute('d', arcPath(0,0,rOuter,rInner,start,end));
-      p.setAttribute('fill', fill);
-      p.setAttribute('class','ring-seg');
-      if(id) p.dataset.id = id;
-
-      p.addEventListener('click', () => openDrawer(id, label));
-
-      svg.appendChild(p);
-
-      if(label){
-        // маленький текст-маркер
-        const aMid = (start+end)/2 - Math.PI/2;
-        const rx = (rOuter + rInner)/2 * Math.cos(aMid);
-        const ry = (rOuter + rInner)/2 * Math.sin(aMid);
-        const t = document.createElementNS('http://www.w3.org/2000/svg','text');
-        t.setAttribute('x', rx);
-        t.setAttribute('y', ry);
-        t.setAttribute('text-anchor','middle');
-        t.setAttribute('dominant-baseline','middle');
-        t.setAttribute('fill', '#101314');
-        t.setAttribute('font-size', 16);
-        t.textContent = label;
-        svg.appendChild(t);
-      }
-    }
-
-    function draw(){
-      clearSVG();
-
-      // зовнішнє кільце: 4 квартали
-      const R0 = 320;   // зовнішній радіус
-      const W  = 72;    // товщина кварталів
-      const GAP = 0.001; // крихітний зазор
-
-      const quarters = [
-        {id:'Q1', fill:'var(--ringBg)'},
-        {id:'Q2', fill:'var(--q2)'},
-        {id:'Q3', fill:'var(--q3)'},
-        {id:'Q4', fill:'var(--q4)'},
-      ];
-      // чергу кольорів для внутрішніх секторів
-      const innerPalette = ['var(--tick)','var(--q3)','var(--q2)','var(--q1)'];
-
-      quarters.forEach((q, i) => {
-        const a0 = i * TAU/4;
-        const a1 = (i+1) * TAU/4 - GAP;
-        seg({rOuter:R0, rInner:R0-W, start:a0, end:a1, fill:q.fill, id:q.id, label:q.id});
-      });
-
-      // середнє кільце: 12 місяців
-      const R1 = R0 - W - 12;
-      const W1 = 60;
-      for(let i=0;i<12;i++){
-        const a0 = i * TAU/12;
-        const a1 = (i+1) * TAU/12 - GAP;
-        // колір чергуємо, як на макеті (пастельні сегменти)
-        const fill = innerPalette[i % innerPalette.length];
-        const qIndex = Math.floor(i/3)+1;  // 0..3 -> Q1..Q4
-        const id = `Q${qIndex}-M${(i%3)+1}`;
-        seg({rOuter:R1, rInner:R1-W1, start:a0, end:a1, fill, id});
-      }
-
-      // внутрішнє кільце (тонке): декоративні акценти тижнів (24 сегм. = по два на місяць)
-      const R2 = R1 - W1 - 10;
-      const W2 = 22;
-      for(let i=0;i<24;i++){
-        const a0 = i * TAU/24;
-        const a1 = (i+1) * TAU/24 - GAP;
-        const fill = i%2===0 ? 'var(--tick)' : 'var(--ringBg)';
-        seg({rOuter:R2, rInner:R2-W2, start:a0, end:a1, fill, id:`W${i+1}`});
-      }
-
-      // центральне коло
-      const c = document.createElementNS('http://www.w3.org/2000/svg','circle');
-      c.setAttribute('cx',0); c.setAttribute('cy',0);
-      c.setAttribute('r', R2-W2-8);
-      c.setAttribute('fill','var(--inner)');
-      svg.appendChild(c);
-    }
-
-    /***********************
-     * Drawer (tasks)
-     ***********************/
-    const drawer = document.getElementById('drawer');
-    const drawerTitle = document.getElementById('drawerTitle');
-    const taskList = document.getElementById('taskList');
-    document.getElementById('btnClose').onclick = () => drawer.classList.add('hidden');
-
-    function openDrawer(id, label){
-      drawer.classList.remove('hidden');
-      drawerTitle.textContent = label || id || 'Завдання';
-
-      const items = model.tasks[id] || [];
-      taskList.innerHTML = items.length
-        ? items.map(t => `
-          <li class="py-2 flex items-center gap-3">
-            <span class="inline-block w-2.5 h-2.5 rounded-full ${dotClass(t.prio)}"></span>
-            <div class="flex-1">
-              <div class="font-medium">${escapeHtml(t.title)}</div>
-              <div class="text-xs opacity-70">${t.status || '—'}${t.due ? ' · до ' + t.due : ''}</div>
-            </div>
-            <button class="px-2 py-1 rounded-lg chip text-xs">Відкрити</button>
-          </li>`).join('')
-        : `<li class="py-2 text-sm opacity-80">Немає задач для сегмента ${escapeHtml(id)}.</li>`;
-    }
-
-    function dotClass(prio){
-      if(prio==='high') return 'bg-red-400';
-      if(prio==='med') return 'bg-yellow-300';
-      return 'bg-green-300';
-    }
-    function escapeHtml(s){ return (s||'').replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])) }
-
-    /***********************
-     * Keyboard shortcuts
-     ***********************/
-    window.addEventListener('keydown', (e)=>{
-      if(e.ctrlKey && e.key.toLowerCase()==='n'){ e.preventDefault(); openDrawer('Q1','Нове завдання (демо)'); }
-      if(e.key==='t' || e.key==='T'){ openDrawer('today','Сьогодні'); }
-    });
-
-    /***********************
-     * Menu button (future actions)
-     ***********************/
-    document.getElementById('btnMenu').addEventListener('click', ()=>{
-      openDrawer('menu','Меню');
-      taskList.innerHTML = `
-        <li class="py-2 text-sm"><button class="px-3 py-1 rounded-xl chip">Фільтри</button></li>
-        <li class="py-2 text-sm"><button class="px-3 py-1 rounded-xl chip">Теми</button></li>
-        <li class="py-2 text-sm"><button class="px-3 py-1 rounded-xl chip">Імпорт Google Calendar</button></li>
-      `;
-    });
-
-    /***********************
-     * PWA registration
-     ***********************/
-    if('serviceWorker' in navigator){
-      window.addEventListener('load', ()=> {
-        navigator.serviceWorker.register('./sw.js');
-      });
-    }
-
-    draw();
-    window.addEventListener('resize', draw);
   </script>
 </body>
 </html>
+
